# Metrics

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-build.yml  docker-image.yml
metrics-api/: Cargo.toml
metrics-api/src/: lib.rs
metrics-core/: Cargo.toml
metrics-core/src/: api.rs  db.rs  loader.rs  main.rs  scheduler.rs
metrics-core/src/static/: index.html
modules/metrics-immich/: Cargo.toml
modules/metrics-immich/src/: lib.rs
modules/metrics-system/: Cargo.toml
modules/metrics-system/src/: lib.rs
modules/metrics-zfs/: Cargo.toml
modules/metrics-zfs/src/: lib.rs
