[package]
name = "metrics-system"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
metrics-api = { path = "../../metrics-api" }
sysinfo = "0.31.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["time"] }
